compile_server/temp/1687602077466_1.compile_error
./temp/1687602077466_1.cpp: In function ‘int main()’:
./temp/1687602077466_1.cpp:4:15: error: ‘a’ was not declared in this scope
      while(1);a
               ^
./temp/1687602077466_1.cpp:5:5: error: expected ‘;’ before ‘return’
     return 0;
     ^
